suppression de la hauteur fixe sur le content du Collapse component + ajout de la balise h1 dans l'entête

--- a/src/style/Collapse.scss
+++ b/src/style/Collapse.scss
@@ -35,7 +35,7 @@ p.content {
 }
 
 .active {
-    max-height: 500px;
+    max-height: 100vh;
     overflow: hidden;
     transition: $transitionCollpase;
     margin-bottom: 15px;
